force-app/main/default/objects/Sales_Solution_Request__c/Sales_Solution_Request__c.object-meta.xml
<CustomObject>
    <description>Corporate &amp; Commercial Solution Qualification Assessment Application</description>
    <label>Sales Solution Request</label>
    <nameField>
        <displayFormat>SR{0000}</displayFormat>
        <label>Sales Solution Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Solution Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>