force-app/main/default/objects/Sales_Solution_Request__c/fields/ApprovedBudget__c.field-meta.xml
<CustomField>
    <fullName>ApprovedBudget__c</fullName>
    <label>Approved Budget</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Australia Post</fullName>
            </value>
            <value>
                <fullName>Combination</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>