force-app/main/default/objects/Sales_Solution_Request__c/fields/CommentsEngagementRequired__c.field-meta.xml
<CustomField>
    <fullName>CommentsEngagementRequired__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>