force-app/main/default/objects/Sales_Solution_Request__c/fields/CompetitorIntelligence__c.field-meta.xml
<CustomField>
    <fullName>CompetitorIntelligence__c</fullName>
    <label>Competitor Intelligence</label>
    <type>TextArea</type>
</CustomField>