force-app/main/default/objects/Sales_Solution_Request__c/fields/ConfirmedNextSteps__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedNextSteps__c</fullName>
    <label>Confirmed Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>