force-app/main/default/objects/Sales_Solution_Request__c/fields/CustomerContact1__c.field-meta.xml
<CustomField>
    <fullName>CustomerContact1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Solution Requests (Customer Contact)</relationshipLabel>
    <relationshipName>Sales_Solution_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>