force-app/main/default/objects/Sales_Solution_Request__c/fields/CustomerContact__c.field-meta.xml
<CustomField>
    <fullName>CustomerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Solution Requests</relationshipLabel>
    <relationshipName>Solution_Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>