force-app/main/default/objects/Sales_Solution_Request__c/fields/EnterpriseAlignment__c.field-meta.xml
<CustomField>
    <fullName>EnterpriseAlignment__c</fullName>
    <label>Enterprise Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vertical Plan</fullName>
            </value>
            <value>
                <fullName>Product Road Map</fullName>
            </value>
            <value>
                <fullName>Industry CVP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>