force-app/main/default/objects/Sales_Solution_Request__c/fields/ProductSpecialist4__c.field-meta.xml
<CustomField>
    <fullName>ProductSpecialist4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Qualifications3</relationshipName>
    <type>Lookup</type>
</CustomField>