force-app/main/default/objects/Sales_Solution_Request__c/fields/ProjectDurationEST__c.field-meta.xml
<CustomField>
    <fullName>ProjectDurationEST__c</fullName>
    <label>Project Duration EST</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current ( 0-3 Months)</fullName>
            </value>
            <value>
                <fullName>Short Term( 0-6 Months)</fullName>
            </value>
            <value>
                <fullName>Medium Term ( 6-12Months)</fullName>
            </value>
            <value>
                <fullName>Long Term( 12 Months +)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>