force-app/main/default/objects/Sales_Solution_Request__c/recordTypes/Business_Sales_Solution_Request.recordType-meta.xml
<RecordType>
    <fullName>Business_Sales_Solution_Request</fullName>
    <active>true</active>
    <description>To raise Sales Solution Request to Business Sales Team</description>
    <label>Business Sales Solution Request</label>
</RecordType>