force-app/main/default/objects/Sales_Solution_Request__c/recordTypes/EC_G_Sales_Solution_Request.recordType-meta.xml
<RecordType>
    <fullName>EC_G_Sales_Solution_Request</fullName>
    <active>true</active>
    <description>To raise Sales Solution Request to EC&amp;G Team</description>
    <label>EC&amp;G Sales Solution Request</label>
</RecordType>