force-app/main/default/objects/Sales_Solution_Request__c/recordTypes/Parcels_Technology_Support.recordType-meta.xml
<RecordType>
    <fullName>Parcels_Technology_Support</fullName>
    <active>true</active>
    <description>Parcels Technology Support</description>
    <label>Parcels Technology Support</label>
</RecordType>