force-app/main/default/objects/Sales_Solution_Request__c/listViews/Business_Sales_Solution_Request.listView-meta.xml
<ListView>
    <fullName>Business_Sales_Solution_Request</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Opportunity__c</columns>
    <columns>Solution_Representative__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sales_Solution_Request__c.Business_Sales_Solution_Request</value>
    </filters>
    <label>Business Sales Solution Request</label>
</ListView>