force-app/main/default/objects/Sales_Solution_Request__c/listViews/EC_G_Sales_Solution_Request.listView-meta.xml
<ListView>
    <fullName>EC_G_Sales_Solution_Request</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Opportunity__c</columns>
    <columns>Solution_Representative__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>,Sales_Solution_Request__c.EC_G_Sales_Solution_Request</value>
    </filters>
    <label>EC&amp;G Sales Solution Request</label>
</ListView>