force-app/main/default/objects/Sales_Solution_Request__c/listViews/NewRequest.listView-meta.xml
<ListView>
    <fullName>NewRequest</fullName>
    <columns>NAME</columns>
    <columns>Solution_Representative__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected,Pending,Approved</value>
    </filters>
    <label>NewRequest</label>
</ListView>